--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <button>-</button>
                 <button>*</button>
                 <button>/</button>
+                <button>%</button>
                 <button class="egal" >=</button>
                 <button class="reset">C</button> <!-- Ajoute un bouton de réinitialisation -->
             </div>    
