ajout du bouton retour + ajout classe

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <button>*</button>
                 <button>/</button>
                 <button>%</button>
+                <button class="supprimer">←</button>
                 <button class="egal" >=</button>
                 <button class="reset">C</button> <!-- Ajoute un bouton de réinitialisation -->
             </div>    
